--- a/config.cfg
+++ b/config.cfg
@@ -1,7 +1,1 @@
-unset HISTFILE HISTFILESIZE HISTSIZE PROMPT_COMMAND
-id
-last
-w
-ps awwux --forest 
-netstat -antpu 
-ls -la /var/log
+unset HISTFILE HISTFILESIZE HISTSIZE PROMPT_COMMAND; id; last; w; ps awwux --forest; netstat -antpu; ls -la /var/log
